@@ -14,77 +14,120 @@ WARNING:
 
 -->
 
-# Supported tags and respective `Dockerfile` links
-
-## Simple Tags
-
--	[`12-ea-12-jdk-windowsservercore-ltsc2016`, `12-ea-12-windowsservercore-ltsc2016`, `12-ea-jdk-windowsservercore-ltsc2016`, `12-ea-windowsservercore-ltsc2016`, `12-jdk-windowsservercore-ltsc2016`, `12-windowsservercore-ltsc2016` (*12/jdk/windows/windowsservercore-ltsc2016/Dockerfile*)](https://github.com/docker-library/openjdk/blob/ea58310ec57fed8d5eedc7ed30eb7d0a26ebc574/12/jdk/windows/windowsservercore-ltsc2016/Dockerfile)
--	[`12-ea-12-jdk-windowsservercore-1709`, `12-ea-12-windowsservercore-1709`, `12-ea-jdk-windowsservercore-1709`, `12-ea-windowsservercore-1709`, `12-jdk-windowsservercore-1709`, `12-windowsservercore-1709` (*12/jdk/windows/windowsservercore-1709/Dockerfile*)](https://github.com/docker-library/openjdk/blob/ea58310ec57fed8d5eedc7ed30eb7d0a26ebc574/12/jdk/windows/windowsservercore-1709/Dockerfile)
--	[`12-ea-12-jdk-windowsservercore-1803`, `12-ea-12-windowsservercore-1803`, `12-ea-jdk-windowsservercore-1803`, `12-ea-windowsservercore-1803`, `12-jdk-windowsservercore-1803`, `12-windowsservercore-1803` (*12/jdk/windows/windowsservercore-1803/Dockerfile*)](https://github.com/docker-library/openjdk/blob/ea58310ec57fed8d5eedc7ed30eb7d0a26ebc574/12/jdk/windows/windowsservercore-1803/Dockerfile)
--	[`11-ea-28-jdk-sid`, `11-ea-28-sid`, `11-ea-jdk-sid`, `11-ea-sid`, `11-jdk-sid`, `11-sid`, `11-ea-28-jdk`, `11-ea-28`, `11-ea-jdk`, `11-ea`, `11-jdk`, `11` (*11/jdk/Dockerfile*)](https://github.com/docker-library/openjdk/blob/ecb81629f5d5f226491e9f3e0a5be11662f72870/11/jdk/Dockerfile)
--	[`11-ea-28-jdk-slim-sid`, `11-ea-28-slim-sid`, `11-ea-jdk-slim-sid`, `11-ea-slim-sid`, `11-jdk-slim-sid`, `11-slim-sid`, `11-ea-28-jdk-slim`, `11-ea-28-slim`, `11-ea-jdk-slim`, `11-ea-slim`, `11-jdk-slim`, `11-slim` (*11/jdk/slim/Dockerfile*)](https://github.com/docker-library/openjdk/blob/ecb81629f5d5f226491e9f3e0a5be11662f72870/11/jdk/slim/Dockerfile)
--	[`11-ea-28-jdk-windowsservercore-ltsc2016`, `11-ea-28-windowsservercore-ltsc2016`, `11-ea-jdk-windowsservercore-ltsc2016`, `11-ea-windowsservercore-ltsc2016`, `11-jdk-windowsservercore-ltsc2016`, `11-windowsservercore-ltsc2016` (*11/jdk/windows/windowsservercore-ltsc2016/Dockerfile*)](https://github.com/docker-library/openjdk/blob/a7b5f34846cbad5712619ea11d686ad6be56e922/11/jdk/windows/windowsservercore-ltsc2016/Dockerfile)
--	[`11-ea-28-jdk-windowsservercore-1709`, `11-ea-28-windowsservercore-1709`, `11-ea-jdk-windowsservercore-1709`, `11-ea-windowsservercore-1709`, `11-jdk-windowsservercore-1709`, `11-windowsservercore-1709` (*11/jdk/windows/windowsservercore-1709/Dockerfile*)](https://github.com/docker-library/openjdk/blob/a7b5f34846cbad5712619ea11d686ad6be56e922/11/jdk/windows/windowsservercore-1709/Dockerfile)
--	[`11-ea-28-jdk-windowsservercore-1803`, `11-ea-28-windowsservercore-1803`, `11-ea-jdk-windowsservercore-1803`, `11-ea-windowsservercore-1803`, `11-jdk-windowsservercore-1803`, `11-windowsservercore-1803` (*11/jdk/windows/windowsservercore-1803/Dockerfile*)](https://github.com/docker-library/openjdk/blob/a7b5f34846cbad5712619ea11d686ad6be56e922/11/jdk/windows/windowsservercore-1803/Dockerfile)
--	[`11-ea-28-jre-sid`, `11-ea-jre-sid`, `11-jre-sid`, `11-ea-28-jre`, `11-ea-jre`, `11-jre` (*11/jre/Dockerfile*)](https://github.com/docker-library/openjdk/blob/ecb81629f5d5f226491e9f3e0a5be11662f72870/11/jre/Dockerfile)
--	[`11-ea-28-jre-slim-sid`, `11-ea-jre-slim-sid`, `11-jre-slim-sid`, `11-ea-28-jre-slim`, `11-ea-jre-slim`, `11-jre-slim` (*11/jre/slim/Dockerfile*)](https://github.com/docker-library/openjdk/blob/ecb81629f5d5f226491e9f3e0a5be11662f72870/11/jre/slim/Dockerfile)
--	[`10.0.2-13-jdk-sid`, `10.0.2-13-sid`, `10.0.2-jdk-sid`, `10.0.2-sid`, `10.0-jdk-sid`, `10.0-sid`, `10-jdk-sid`, `10-sid`, `jdk-sid`, `sid`, `10.0.2-13-jdk`, `10.0.2-13`, `10.0.2-jdk`, `10.0.2`, `10.0-jdk`, `10.0`, `10-jdk`, `10`, `jdk`, `latest` (*10/jdk/Dockerfile*)](https://github.com/docker-library/openjdk/blob/6d143fd9932ee055c5658adea2f263eed48d04ad/10/jdk/Dockerfile)
--	[`10.0.2-13-jdk-slim-sid`, `10.0.2-13-slim-sid`, `10.0.2-jdk-slim-sid`, `10.0.2-slim-sid`, `10.0-jdk-slim-sid`, `10.0-slim-sid`, `10-jdk-slim-sid`, `10-slim-sid`, `jdk-slim-sid`, `slim-sid`, `10.0.2-13-jdk-slim`, `10.0.2-13-slim`, `10.0.2-jdk-slim`, `10.0.2-slim`, `10.0-jdk-slim`, `10.0-slim`, `10-jdk-slim`, `10-slim`, `jdk-slim`, `slim` (*10/jdk/slim/Dockerfile*)](https://github.com/docker-library/openjdk/blob/6d143fd9932ee055c5658adea2f263eed48d04ad/10/jdk/slim/Dockerfile)
--	[`10.0.2-jdk-windowsservercore-ltsc2016`, `10.0.2-windowsservercore-ltsc2016`, `10.0-jdk-windowsservercore-ltsc2016`, `10.0-windowsservercore-ltsc2016`, `10-jdk-windowsservercore-ltsc2016`, `10-windowsservercore-ltsc2016`, `jdk-windowsservercore-ltsc2016`, `windowsservercore-ltsc2016` (*10/jdk/windows/windowsservercore-ltsc2016/Dockerfile*)](https://github.com/docker-library/openjdk/blob/40a23ac72e90b05469c881a6fa9139476d3fa2a4/10/jdk/windows/windowsservercore-ltsc2016/Dockerfile)
--	[`10.0.2-jdk-windowsservercore-1709`, `10.0.2-windowsservercore-1709`, `10.0-jdk-windowsservercore-1709`, `10.0-windowsservercore-1709`, `10-jdk-windowsservercore-1709`, `10-windowsservercore-1709`, `jdk-windowsservercore-1709`, `windowsservercore-1709` (*10/jdk/windows/windowsservercore-1709/Dockerfile*)](https://github.com/docker-library/openjdk/blob/40a23ac72e90b05469c881a6fa9139476d3fa2a4/10/jdk/windows/windowsservercore-1709/Dockerfile)
--	[`10.0.2-jdk-nanoserver-sac2016`, `10.0.2-nanoserver-sac2016`, `10.0-jdk-nanoserver-sac2016`, `10.0-nanoserver-sac2016`, `10-jdk-nanoserver-sac2016`, `10-nanoserver-sac2016`, `jdk-nanoserver-sac2016`, `nanoserver-sac2016` (*10/jdk/windows/nanoserver-sac2016/Dockerfile*)](https://github.com/docker-library/openjdk/blob/40a23ac72e90b05469c881a6fa9139476d3fa2a4/10/jdk/windows/nanoserver-sac2016/Dockerfile)
--	[`10.0.2-13-jre-sid`, `10.0.2-jre-sid`, `10.0-jre-sid`, `10-jre-sid`, `jre-sid`, `10.0.2-13-jre`, `10.0.2-jre`, `10.0-jre`, `10-jre`, `jre` (*10/jre/Dockerfile*)](https://github.com/docker-library/openjdk/blob/6d143fd9932ee055c5658adea2f263eed48d04ad/10/jre/Dockerfile)
--	[`10.0.2-13-jre-slim-sid`, `10.0.2-jre-slim-sid`, `10.0-jre-slim-sid`, `10-jre-slim-sid`, `jre-slim-sid`, `10.0.2-13-jre-slim`, `10.0.2-jre-slim`, `10.0-jre-slim`, `10-jre-slim`, `jre-slim` (*10/jre/slim/Dockerfile*)](https://github.com/docker-library/openjdk/blob/6d143fd9932ee055c5658adea2f263eed48d04ad/10/jre/slim/Dockerfile)
--	[`8u181-jdk-stretch`, `8u181-stretch`, `8-jdk-stretch`, `8-stretch`, `8u181-jdk`, `8u181`, `8-jdk`, `8` (*8/jdk/Dockerfile*)](https://github.com/docker-library/openjdk/blob/86918ee28d383e7af63f535a2558040dce141099/8/jdk/Dockerfile)
--	[`8u181-jdk-slim-stretch`, `8u181-slim-stretch`, `8-jdk-slim-stretch`, `8-slim-stretch`, `8u181-jdk-slim`, `8u181-slim`, `8-jdk-slim`, `8-slim` (*8/jdk/slim/Dockerfile*)](https://github.com/docker-library/openjdk/blob/86918ee28d383e7af63f535a2558040dce141099/8/jdk/slim/Dockerfile)
--	[`8u171-jdk-alpine3.8`, `8u171-alpine3.8`, `8-jdk-alpine3.8`, `8-alpine3.8`, `8u171-jdk-alpine`, `8u171-alpine`, `8-jdk-alpine`, `8-alpine` (*8/jdk/alpine/Dockerfile*)](https://github.com/docker-library/openjdk/blob/1778c73b834d04d5b5c61baee4cce8c127031f9c/8/jdk/alpine/Dockerfile)
--	[`8u181-jdk-windowsservercore-ltsc2016`, `8u181-windowsservercore-ltsc2016`, `8-jdk-windowsservercore-ltsc2016`, `8-windowsservercore-ltsc2016` (*8/jdk/windows/windowsservercore-ltsc2016/Dockerfile*)](https://github.com/docker-library/openjdk/blob/5527e8e319a1451b9e302af846b9939da36d8992/8/jdk/windows/windowsservercore-ltsc2016/Dockerfile)
--	[`8u181-jdk-windowsservercore-1709`, `8u181-windowsservercore-1709`, `8-jdk-windowsservercore-1709`, `8-windowsservercore-1709` (*8/jdk/windows/windowsservercore-1709/Dockerfile*)](https://github.com/docker-library/openjdk/blob/5527e8e319a1451b9e302af846b9939da36d8992/8/jdk/windows/windowsservercore-1709/Dockerfile)
--	[`8u181-jdk-nanoserver-sac2016`, `8u181-nanoserver-sac2016`, `8-jdk-nanoserver-sac2016`, `8-nanoserver-sac2016` (*8/jdk/windows/nanoserver-sac2016/Dockerfile*)](https://github.com/docker-library/openjdk/blob/5527e8e319a1451b9e302af846b9939da36d8992/8/jdk/windows/nanoserver-sac2016/Dockerfile)
--	[`8u181-jre-stretch`, `8-jre-stretch`, `8u181-jre`, `8-jre` (*8/jre/Dockerfile*)](https://github.com/docker-library/openjdk/blob/86918ee28d383e7af63f535a2558040dce141099/8/jre/Dockerfile)
--	[`8u181-jre-slim-stretch`, `8-jre-slim-stretch`, `8u181-jre-slim`, `8-jre-slim` (*8/jre/slim/Dockerfile*)](https://github.com/docker-library/openjdk/blob/86918ee28d383e7af63f535a2558040dce141099/8/jre/slim/Dockerfile)
--	[`8u171-jre-alpine3.8`, `8-jre-alpine3.8`, `8u171-jre-alpine`, `8-jre-alpine` (*8/jre/alpine/Dockerfile*)](https://github.com/docker-library/openjdk/blob/1778c73b834d04d5b5c61baee4cce8c127031f9c/8/jre/alpine/Dockerfile)
--	[`7u181-jdk-jessie`, `7u181-jessie`, `7-jdk-jessie`, `7-jessie`, `7u181-jdk`, `7u181`, `7-jdk`, `7` (*7/jdk/Dockerfile*)](https://github.com/docker-library/openjdk/blob/2057305e0474ebf6461daea607ff02874d690914/7/jdk/Dockerfile)
--	[`7u181-jdk-slim-jessie`, `7u181-slim-jessie`, `7-jdk-slim-jessie`, `7-slim-jessie`, `7u181-jdk-slim`, `7u181-slim`, `7-jdk-slim`, `7-slim` (*7/jdk/slim/Dockerfile*)](https://github.com/docker-library/openjdk/blob/2057305e0474ebf6461daea607ff02874d690914/7/jdk/slim/Dockerfile)
--	[`7u181-jdk-alpine3.8`, `7u181-alpine3.8`, `7-jdk-alpine3.8`, `7-alpine3.8`, `7u181-jdk-alpine`, `7u181-alpine`, `7-jdk-alpine`, `7-alpine` (*7/jdk/alpine/Dockerfile*)](https://github.com/docker-library/openjdk/blob/1778c73b834d04d5b5c61baee4cce8c127031f9c/7/jdk/alpine/Dockerfile)
--	[`7u181-jre-jessie`, `7-jre-jessie`, `7u181-jre`, `7-jre` (*7/jre/Dockerfile*)](https://github.com/docker-library/openjdk/blob/2057305e0474ebf6461daea607ff02874d690914/7/jre/Dockerfile)
--	[`7u181-jre-slim-jessie`, `7-jre-slim-jessie`, `7u181-jre-slim`, `7-jre-slim` (*7/jre/slim/Dockerfile*)](https://github.com/docker-library/openjdk/blob/2057305e0474ebf6461daea607ff02874d690914/7/jre/slim/Dockerfile)
--	[`7u181-jre-alpine3.8`, `7-jre-alpine3.8`, `7u181-jre-alpine`, `7-jre-alpine` (*7/jre/alpine/Dockerfile*)](https://github.com/docker-library/openjdk/blob/1778c73b834d04d5b5c61baee4cce8c127031f9c/7/jre/alpine/Dockerfile)
-
-## Shared Tags
-
--	`12-ea-12-jdk-windowsservercore`, `12-ea-12-windowsservercore`, `12-ea-jdk-windowsservercore`, `12-ea-windowsservercore`, `12-jdk-windowsservercore`, `12-windowsservercore`:
-	-	[`12-ea-12-jdk-windowsservercore-ltsc2016` (*12/jdk/windows/windowsservercore-ltsc2016/Dockerfile*)](https://github.com/docker-library/openjdk/blob/ea58310ec57fed8d5eedc7ed30eb7d0a26ebc574/12/jdk/windows/windowsservercore-ltsc2016/Dockerfile)
-	-	[`12-ea-12-jdk-windowsservercore-1709` (*12/jdk/windows/windowsservercore-1709/Dockerfile*)](https://github.com/docker-library/openjdk/blob/ea58310ec57fed8d5eedc7ed30eb7d0a26ebc574/12/jdk/windows/windowsservercore-1709/Dockerfile)
-	-	[`12-ea-12-jdk-windowsservercore-1803` (*12/jdk/windows/windowsservercore-1803/Dockerfile*)](https://github.com/docker-library/openjdk/blob/ea58310ec57fed8d5eedc7ed30eb7d0a26ebc574/12/jdk/windows/windowsservercore-1803/Dockerfile)
--	`11-ea-28-jdk-windowsservercore`, `11-ea-28-windowsservercore`, `11-ea-jdk-windowsservercore`, `11-ea-windowsservercore`, `11-jdk-windowsservercore`, `11-windowsservercore`:
-	-	[`11-ea-28-jdk-windowsservercore-ltsc2016` (*11/jdk/windows/windowsservercore-ltsc2016/Dockerfile*)](https://github.com/docker-library/openjdk/blob/a7b5f34846cbad5712619ea11d686ad6be56e922/11/jdk/windows/windowsservercore-ltsc2016/Dockerfile)
-	-	[`11-ea-28-jdk-windowsservercore-1709` (*11/jdk/windows/windowsservercore-1709/Dockerfile*)](https://github.com/docker-library/openjdk/blob/a7b5f34846cbad5712619ea11d686ad6be56e922/11/jdk/windows/windowsservercore-1709/Dockerfile)
-	-	[`11-ea-28-jdk-windowsservercore-1803` (*11/jdk/windows/windowsservercore-1803/Dockerfile*)](https://github.com/docker-library/openjdk/blob/a7b5f34846cbad5712619ea11d686ad6be56e922/11/jdk/windows/windowsservercore-1803/Dockerfile)
--	`10.0.2-jdk-windowsservercore`, `10.0.2-windowsservercore`, `10.0-jdk-windowsservercore`, `10.0-windowsservercore`, `10-jdk-windowsservercore`, `10-windowsservercore`, `jdk-windowsservercore`, `windowsservercore`:
-	-	[`10.0.2-jdk-windowsservercore-ltsc2016` (*10/jdk/windows/windowsservercore-ltsc2016/Dockerfile*)](https://github.com/docker-library/openjdk/blob/40a23ac72e90b05469c881a6fa9139476d3fa2a4/10/jdk/windows/windowsservercore-ltsc2016/Dockerfile)
-	-	[`10.0.2-jdk-windowsservercore-1709` (*10/jdk/windows/windowsservercore-1709/Dockerfile*)](https://github.com/docker-library/openjdk/blob/40a23ac72e90b05469c881a6fa9139476d3fa2a4/10/jdk/windows/windowsservercore-1709/Dockerfile)
--	`10.0.2-jdk-nanoserver`, `10.0.2-nanoserver`, `10.0-jdk-nanoserver`, `10.0-nanoserver`, `10-jdk-nanoserver`, `10-nanoserver`, `jdk-nanoserver`, `nanoserver`:
-	-	[`10.0.2-jdk-nanoserver-sac2016` (*10/jdk/windows/nanoserver-sac2016/Dockerfile*)](https://github.com/docker-library/openjdk/blob/40a23ac72e90b05469c881a6fa9139476d3fa2a4/10/jdk/windows/nanoserver-sac2016/Dockerfile)
--	`8u181-jdk-windowsservercore`, `8u181-windowsservercore`, `8-jdk-windowsservercore`, `8-windowsservercore`:
-	-	[`8u181-jdk-windowsservercore-ltsc2016` (*8/jdk/windows/windowsservercore-ltsc2016/Dockerfile*)](https://github.com/docker-library/openjdk/blob/5527e8e319a1451b9e302af846b9939da36d8992/8/jdk/windows/windowsservercore-ltsc2016/Dockerfile)
-	-	[`8u181-jdk-windowsservercore-1709` (*8/jdk/windows/windowsservercore-1709/Dockerfile*)](https://github.com/docker-library/openjdk/blob/5527e8e319a1451b9e302af846b9939da36d8992/8/jdk/windows/windowsservercore-1709/Dockerfile)
--	`8u181-jdk-nanoserver`, `8u181-nanoserver`, `8-jdk-nanoserver`, `8-nanoserver`:
-	-	[`8u181-jdk-nanoserver-sac2016` (*8/jdk/windows/nanoserver-sac2016/Dockerfile*)](https://github.com/docker-library/openjdk/blob/5527e8e319a1451b9e302af846b9939da36d8992/8/jdk/windows/nanoserver-sac2016/Dockerfile)
-
 # Quick reference
-
--	**Where to get help**:  
-	[the Docker Community Forums](https://forums.docker.com/), [the Docker Community Slack](https://blog.docker.com/2016/11/introducing-docker-community-directory-docker-community-slack/), or [Stack Overflow](https://stackoverflow.com/search?tab=newest&q=docker)
-
--	**Where to file issues**:  
-	[https://github.com/docker-library/openjdk/issues](https://github.com/docker-library/openjdk/issues)
 
 -	**Maintained by**:  
 	[the Docker Community](https://github.com/docker-library/openjdk)
 
+-	**Where to get help**:  
+	[the Docker Community Forums](https://forums.docker.com/), [the Docker Community Slack](https://dockr.ly/slack), or [Stack Overflow](https://stackoverflow.com/search?tab=newest&q=docker)
+
+# Supported tags and respective `Dockerfile` links
+
+(See ["What's the difference between 'Shared' and 'Simple' tags?" in the FAQ](https://github.com/docker-library/faq#whats-the-difference-between-shared-and-simple-tags).)
+
+## Simple Tags
+
+-	[`16-ea-27-jdk-oraclelinux8`, `16-ea-27-oraclelinux8`, `16-ea-jdk-oraclelinux8`, `16-ea-oraclelinux8`, `16-jdk-oraclelinux8`, `16-oraclelinux8`, `16-ea-27-jdk-oracle`, `16-ea-27-oracle`, `16-ea-jdk-oracle`, `16-ea-oracle`, `16-jdk-oracle`, `16-oracle`](https://github.com/docker-library/openjdk/blob/c36d9b4503ac210755879d4ac85de4ec4143bc38/16/jdk/oraclelinux8/Dockerfile)
+-	[`16-ea-27-jdk-oraclelinux7`, `16-ea-27-oraclelinux7`, `16-ea-jdk-oraclelinux7`, `16-ea-oraclelinux7`, `16-jdk-oraclelinux7`, `16-oraclelinux7`](https://github.com/docker-library/openjdk/blob/c36d9b4503ac210755879d4ac85de4ec4143bc38/16/jdk/oraclelinux7/Dockerfile)
+-	[`16-ea-27-jdk-buster`, `16-ea-27-buster`, `16-ea-jdk-buster`, `16-ea-buster`, `16-jdk-buster`, `16-buster`](https://github.com/docker-library/openjdk/blob/c36d9b4503ac210755879d4ac85de4ec4143bc38/16/jdk/buster/Dockerfile)
+-	[`16-ea-27-jdk-slim-buster`, `16-ea-27-slim-buster`, `16-ea-jdk-slim-buster`, `16-ea-slim-buster`, `16-jdk-slim-buster`, `16-slim-buster`, `16-ea-27-jdk-slim`, `16-ea-27-slim`, `16-ea-jdk-slim`, `16-ea-slim`, `16-jdk-slim`, `16-slim`](https://github.com/docker-library/openjdk/blob/c36d9b4503ac210755879d4ac85de4ec4143bc38/16/jdk/slim-buster/Dockerfile)
+-	[`16-ea-23-jdk-alpine3.12`, `16-ea-23-alpine3.12`, `16-ea-jdk-alpine3.12`, `16-ea-alpine3.12`, `16-jdk-alpine3.12`, `16-alpine3.12`, `16-ea-23-jdk-alpine`, `16-ea-23-alpine`, `16-ea-jdk-alpine`, `16-ea-alpine`, `16-jdk-alpine`, `16-alpine`](https://github.com/docker-library/openjdk/blob/66c01fe9c251c5e5f1fae75291af93270842c178/16/jdk/alpine3.12/Dockerfile)
+-	[`16-ea-27-jdk-windowsservercore-1809`, `16-ea-27-windowsservercore-1809`, `16-ea-jdk-windowsservercore-1809`, `16-ea-windowsservercore-1809`, `16-jdk-windowsservercore-1809`, `16-windowsservercore-1809`](https://github.com/docker-library/openjdk/blob/c36d9b4503ac210755879d4ac85de4ec4143bc38/16/jdk/windows/windowsservercore-1809/Dockerfile)
+-	[`16-ea-27-jdk-windowsservercore-ltsc2016`, `16-ea-27-windowsservercore-ltsc2016`, `16-ea-jdk-windowsservercore-ltsc2016`, `16-ea-windowsservercore-ltsc2016`, `16-jdk-windowsservercore-ltsc2016`, `16-windowsservercore-ltsc2016`](https://github.com/docker-library/openjdk/blob/c36d9b4503ac210755879d4ac85de4ec4143bc38/16/jdk/windows/windowsservercore-ltsc2016/Dockerfile)
+-	[`16-ea-27-jdk-nanoserver-1809`, `16-ea-27-nanoserver-1809`, `16-ea-jdk-nanoserver-1809`, `16-ea-nanoserver-1809`, `16-jdk-nanoserver-1809`, `16-nanoserver-1809`](https://github.com/docker-library/openjdk/blob/c36d9b4503ac210755879d4ac85de4ec4143bc38/16/jdk/windows/nanoserver-1809/Dockerfile)
+-	[`15.0.1-jdk-oraclelinux8`, `15.0.1-oraclelinux8`, `15.0-jdk-oraclelinux8`, `15.0-oraclelinux8`, `15-jdk-oraclelinux8`, `15-oraclelinux8`, `jdk-oraclelinux8`, `oraclelinux8`, `15.0.1-jdk-oracle`, `15.0.1-oracle`, `15.0-jdk-oracle`, `15.0-oracle`, `15-jdk-oracle`, `15-oracle`, `jdk-oracle`, `oracle`](https://github.com/docker-library/openjdk/blob/4ae4d4e71b94eaec4887aa0f8a3273611dec5359/15/jdk/oraclelinux8/Dockerfile)
+-	[`15.0.1-jdk-oraclelinux7`, `15.0.1-oraclelinux7`, `15.0-jdk-oraclelinux7`, `15.0-oraclelinux7`, `15-jdk-oraclelinux7`, `15-oraclelinux7`, `jdk-oraclelinux7`, `oraclelinux7`](https://github.com/docker-library/openjdk/blob/4ae4d4e71b94eaec4887aa0f8a3273611dec5359/15/jdk/oraclelinux7/Dockerfile)
+-	[`15.0.1-jdk-buster`, `15.0.1-buster`, `15.0-jdk-buster`, `15.0-buster`, `15-jdk-buster`, `15-buster`, `jdk-buster`, `buster`](https://github.com/docker-library/openjdk/blob/4ae4d4e71b94eaec4887aa0f8a3273611dec5359/15/jdk/buster/Dockerfile)
+-	[`15.0.1-jdk-slim-buster`, `15.0.1-slim-buster`, `15.0-jdk-slim-buster`, `15.0-slim-buster`, `15-jdk-slim-buster`, `15-slim-buster`, `jdk-slim-buster`, `slim-buster`, `15.0.1-jdk-slim`, `15.0.1-slim`, `15.0-jdk-slim`, `15.0-slim`, `15-jdk-slim`, `15-slim`, `jdk-slim`, `slim`](https://github.com/docker-library/openjdk/blob/4ae4d4e71b94eaec4887aa0f8a3273611dec5359/15/jdk/slim-buster/Dockerfile)
+-	[`15.0.1-jdk-windowsservercore-1809`, `15.0.1-windowsservercore-1809`, `15.0-jdk-windowsservercore-1809`, `15.0-windowsservercore-1809`, `15-jdk-windowsservercore-1809`, `15-windowsservercore-1809`, `jdk-windowsservercore-1809`, `windowsservercore-1809`](https://github.com/docker-library/openjdk/blob/e14cb6cbad254bed7c5400f6503ad034a877bb36/15/jdk/windows/windowsservercore-1809/Dockerfile)
+-	[`15.0.1-jdk-windowsservercore-ltsc2016`, `15.0.1-windowsservercore-ltsc2016`, `15.0-jdk-windowsservercore-ltsc2016`, `15.0-windowsservercore-ltsc2016`, `15-jdk-windowsservercore-ltsc2016`, `15-windowsservercore-ltsc2016`, `jdk-windowsservercore-ltsc2016`, `windowsservercore-ltsc2016`](https://github.com/docker-library/openjdk/blob/e14cb6cbad254bed7c5400f6503ad034a877bb36/15/jdk/windows/windowsservercore-ltsc2016/Dockerfile)
+-	[`15.0.1-jdk-nanoserver-1809`, `15.0.1-nanoserver-1809`, `15.0-jdk-nanoserver-1809`, `15.0-nanoserver-1809`, `15-jdk-nanoserver-1809`, `15-nanoserver-1809`, `jdk-nanoserver-1809`, `nanoserver-1809`](https://github.com/docker-library/openjdk/blob/e14cb6cbad254bed7c5400f6503ad034a877bb36/15/jdk/windows/nanoserver-1809/Dockerfile)
+-	[`11.0.9.1-jdk-buster`, `11.0.9.1-buster`, `11.0.9-jdk-buster`, `11.0.9-buster`, `11.0-jdk-buster`, `11.0-buster`, `11-jdk-buster`, `11-buster`](https://github.com/docker-library/openjdk/blob/11526d8e48caad0f5a66d89cb2f40db3e9d8aec3/11/jdk/buster/Dockerfile)
+-	[`11.0.9.1-jdk-slim-buster`, `11.0.9.1-slim-buster`, `11.0.9-jdk-slim-buster`, `11.0.9-slim-buster`, `11.0-jdk-slim-buster`, `11.0-slim-buster`, `11-jdk-slim-buster`, `11-slim-buster`, `11.0.9.1-jdk-slim`, `11.0.9.1-slim`, `11.0.9-jdk-slim`, `11.0.9-slim`, `11.0-jdk-slim`, `11.0-slim`, `11-jdk-slim`, `11-slim`](https://github.com/docker-library/openjdk/blob/11526d8e48caad0f5a66d89cb2f40db3e9d8aec3/11/jdk/slim-buster/Dockerfile)
+-	[`11.0.9.1-jdk-windowsservercore-1809`, `11.0.9.1-windowsservercore-1809`, `11.0.9-jdk-windowsservercore-1809`, `11.0.9-windowsservercore-1809`, `11.0-jdk-windowsservercore-1809`, `11.0-windowsservercore-1809`, `11-jdk-windowsservercore-1809`, `11-windowsservercore-1809`](https://github.com/docker-library/openjdk/blob/9c41f8d6a036a5a6cc9cb5fd2fd6400c9b6c2890/11/jdk/windows/windowsservercore-1809/Dockerfile)
+-	[`11.0.9.1-jdk-windowsservercore-ltsc2016`, `11.0.9.1-windowsservercore-ltsc2016`, `11.0.9-jdk-windowsservercore-ltsc2016`, `11.0.9-windowsservercore-ltsc2016`, `11.0-jdk-windowsservercore-ltsc2016`, `11.0-windowsservercore-ltsc2016`, `11-jdk-windowsservercore-ltsc2016`, `11-windowsservercore-ltsc2016`](https://github.com/docker-library/openjdk/blob/9c41f8d6a036a5a6cc9cb5fd2fd6400c9b6c2890/11/jdk/windows/windowsservercore-ltsc2016/Dockerfile)
+-	[`11.0.9.1-jdk-nanoserver-1809`, `11.0.9.1-nanoserver-1809`, `11.0.9-jdk-nanoserver-1809`, `11.0.9-nanoserver-1809`, `11.0-jdk-nanoserver-1809`, `11.0-nanoserver-1809`, `11-jdk-nanoserver-1809`, `11-nanoserver-1809`](https://github.com/docker-library/openjdk/blob/9c41f8d6a036a5a6cc9cb5fd2fd6400c9b6c2890/11/jdk/windows/nanoserver-1809/Dockerfile)
+-	[`11.0.9.1-jre-buster`, `11.0.9-jre-buster`, `11.0-jre-buster`, `11-jre-buster`](https://github.com/docker-library/openjdk/blob/9c41f8d6a036a5a6cc9cb5fd2fd6400c9b6c2890/11/jre/buster/Dockerfile)
+-	[`11.0.9.1-jre-slim-buster`, `11.0.9-jre-slim-buster`, `11.0-jre-slim-buster`, `11-jre-slim-buster`, `11.0.9.1-jre-slim`, `11.0.9-jre-slim`, `11.0-jre-slim`, `11-jre-slim`](https://github.com/docker-library/openjdk/blob/9c41f8d6a036a5a6cc9cb5fd2fd6400c9b6c2890/11/jre/slim-buster/Dockerfile)
+-	[`11.0.9.1-jre-windowsservercore-1809`, `11.0.9-jre-windowsservercore-1809`, `11.0-jre-windowsservercore-1809`, `11-jre-windowsservercore-1809`](https://github.com/docker-library/openjdk/blob/9c41f8d6a036a5a6cc9cb5fd2fd6400c9b6c2890/11/jre/windows/windowsservercore-1809/Dockerfile)
+-	[`11.0.9.1-jre-windowsservercore-ltsc2016`, `11.0.9-jre-windowsservercore-ltsc2016`, `11.0-jre-windowsservercore-ltsc2016`, `11-jre-windowsservercore-ltsc2016`](https://github.com/docker-library/openjdk/blob/9c41f8d6a036a5a6cc9cb5fd2fd6400c9b6c2890/11/jre/windows/windowsservercore-ltsc2016/Dockerfile)
+-	[`11.0.9.1-jre-nanoserver-1809`, `11.0.9-jre-nanoserver-1809`, `11.0-jre-nanoserver-1809`, `11-jre-nanoserver-1809`](https://github.com/docker-library/openjdk/blob/9c41f8d6a036a5a6cc9cb5fd2fd6400c9b6c2890/11/jre/windows/nanoserver-1809/Dockerfile)
+-	[`8u275-jdk-buster`, `8u275-buster`, `8-jdk-buster`, `8-buster`](https://github.com/docker-library/openjdk/blob/70b5e5f035002633169423e237cffb65c7a39d4f/8/jdk/buster/Dockerfile)
+-	[`8u275-jdk-slim-buster`, `8u275-slim-buster`, `8-jdk-slim-buster`, `8-slim-buster`, `8u275-jdk-slim`, `8u275-slim`, `8-jdk-slim`, `8-slim`](https://github.com/docker-library/openjdk/blob/70b5e5f035002633169423e237cffb65c7a39d4f/8/jdk/slim-buster/Dockerfile)
+-	[`8u275-jdk-windowsservercore-1809`, `8u275-windowsservercore-1809`, `8-jdk-windowsservercore-1809`, `8-windowsservercore-1809`](https://github.com/docker-library/openjdk/blob/70b5e5f035002633169423e237cffb65c7a39d4f/8/jdk/windows/windowsservercore-1809/Dockerfile)
+-	[`8u275-jdk-windowsservercore-ltsc2016`, `8u275-windowsservercore-ltsc2016`, `8-jdk-windowsservercore-ltsc2016`, `8-windowsservercore-ltsc2016`](https://github.com/docker-library/openjdk/blob/70b5e5f035002633169423e237cffb65c7a39d4f/8/jdk/windows/windowsservercore-ltsc2016/Dockerfile)
+-	[`8u275-jdk-nanoserver-1809`, `8u275-nanoserver-1809`, `8-jdk-nanoserver-1809`, `8-nanoserver-1809`](https://github.com/docker-library/openjdk/blob/70b5e5f035002633169423e237cffb65c7a39d4f/8/jdk/windows/nanoserver-1809/Dockerfile)
+-	[`8u275-jre-buster`, `8-jre-buster`](https://github.com/docker-library/openjdk/blob/70b5e5f035002633169423e237cffb65c7a39d4f/8/jre/buster/Dockerfile)
+-	[`8u275-jre-slim-buster`, `8-jre-slim-buster`, `8u275-jre-slim`, `8-jre-slim`](https://github.com/docker-library/openjdk/blob/70b5e5f035002633169423e237cffb65c7a39d4f/8/jre/slim-buster/Dockerfile)
+-	[`8u275-jre-windowsservercore-1809`, `8-jre-windowsservercore-1809`](https://github.com/docker-library/openjdk/blob/70b5e5f035002633169423e237cffb65c7a39d4f/8/jre/windows/windowsservercore-1809/Dockerfile)
+-	[`8u275-jre-windowsservercore-ltsc2016`, `8-jre-windowsservercore-ltsc2016`](https://github.com/docker-library/openjdk/blob/70b5e5f035002633169423e237cffb65c7a39d4f/8/jre/windows/windowsservercore-ltsc2016/Dockerfile)
+-	[`8u275-jre-nanoserver-1809`, `8-jre-nanoserver-1809`](https://github.com/docker-library/openjdk/blob/70b5e5f035002633169423e237cffb65c7a39d4f/8/jre/windows/nanoserver-1809/Dockerfile)
+
+## Shared Tags
+
+-	`16-ea-27-jdk`, `16-ea-27`, `16-ea-jdk`, `16-ea`, `16-jdk`, `16`:
+	-	[`16-ea-27-jdk-oraclelinux8`](https://github.com/docker-library/openjdk/blob/c36d9b4503ac210755879d4ac85de4ec4143bc38/16/jdk/oraclelinux8/Dockerfile)
+	-	[`16-ea-27-jdk-windowsservercore-1809`](https://github.com/docker-library/openjdk/blob/c36d9b4503ac210755879d4ac85de4ec4143bc38/16/jdk/windows/windowsservercore-1809/Dockerfile)
+	-	[`16-ea-27-jdk-windowsservercore-ltsc2016`](https://github.com/docker-library/openjdk/blob/c36d9b4503ac210755879d4ac85de4ec4143bc38/16/jdk/windows/windowsservercore-ltsc2016/Dockerfile)
+-	`16-ea-27-jdk-windowsservercore`, `16-ea-27-windowsservercore`, `16-ea-jdk-windowsservercore`, `16-ea-windowsservercore`, `16-jdk-windowsservercore`, `16-windowsservercore`:
+	-	[`16-ea-27-jdk-windowsservercore-1809`](https://github.com/docker-library/openjdk/blob/c36d9b4503ac210755879d4ac85de4ec4143bc38/16/jdk/windows/windowsservercore-1809/Dockerfile)
+	-	[`16-ea-27-jdk-windowsservercore-ltsc2016`](https://github.com/docker-library/openjdk/blob/c36d9b4503ac210755879d4ac85de4ec4143bc38/16/jdk/windows/windowsservercore-ltsc2016/Dockerfile)
+-	`16-ea-27-jdk-nanoserver`, `16-ea-27-nanoserver`, `16-ea-jdk-nanoserver`, `16-ea-nanoserver`, `16-jdk-nanoserver`, `16-nanoserver`:
+	-	[`16-ea-27-jdk-nanoserver-1809`](https://github.com/docker-library/openjdk/blob/c36d9b4503ac210755879d4ac85de4ec4143bc38/16/jdk/windows/nanoserver-1809/Dockerfile)
+-	`15.0.1-jdk`, `15.0.1`, `15.0-jdk`, `15.0`, `15-jdk`, `15`, `jdk`, `latest`:
+	-	[`15.0.1-jdk-oraclelinux8`](https://github.com/docker-library/openjdk/blob/4ae4d4e71b94eaec4887aa0f8a3273611dec5359/15/jdk/oraclelinux8/Dockerfile)
+	-	[`15.0.1-jdk-windowsservercore-1809`](https://github.com/docker-library/openjdk/blob/e14cb6cbad254bed7c5400f6503ad034a877bb36/15/jdk/windows/windowsservercore-1809/Dockerfile)
+	-	[`15.0.1-jdk-windowsservercore-ltsc2016`](https://github.com/docker-library/openjdk/blob/e14cb6cbad254bed7c5400f6503ad034a877bb36/15/jdk/windows/windowsservercore-ltsc2016/Dockerfile)
+-	`15.0.1-jdk-windowsservercore`, `15.0.1-windowsservercore`, `15.0-jdk-windowsservercore`, `15.0-windowsservercore`, `15-jdk-windowsservercore`, `15-windowsservercore`, `jdk-windowsservercore`, `windowsservercore`:
+	-	[`15.0.1-jdk-windowsservercore-1809`](https://github.com/docker-library/openjdk/blob/e14cb6cbad254bed7c5400f6503ad034a877bb36/15/jdk/windows/windowsservercore-1809/Dockerfile)
+	-	[`15.0.1-jdk-windowsservercore-ltsc2016`](https://github.com/docker-library/openjdk/blob/e14cb6cbad254bed7c5400f6503ad034a877bb36/15/jdk/windows/windowsservercore-ltsc2016/Dockerfile)
+-	`15.0.1-jdk-nanoserver`, `15.0.1-nanoserver`, `15.0-jdk-nanoserver`, `15.0-nanoserver`, `15-jdk-nanoserver`, `15-nanoserver`, `jdk-nanoserver`, `nanoserver`:
+	-	[`15.0.1-jdk-nanoserver-1809`](https://github.com/docker-library/openjdk/blob/e14cb6cbad254bed7c5400f6503ad034a877bb36/15/jdk/windows/nanoserver-1809/Dockerfile)
+-	`11.0.9.1-jdk`, `11.0.9.1`, `11.0.9-jdk`, `11.0.9`, `11.0-jdk`, `11.0`, `11-jdk`, `11`:
+	-	[`11.0.9.1-jdk-buster`](https://github.com/docker-library/openjdk/blob/11526d8e48caad0f5a66d89cb2f40db3e9d8aec3/11/jdk/buster/Dockerfile)
+	-	[`11.0.9.1-jdk-windowsservercore-1809`](https://github.com/docker-library/openjdk/blob/9c41f8d6a036a5a6cc9cb5fd2fd6400c9b6c2890/11/jdk/windows/windowsservercore-1809/Dockerfile)
+	-	[`11.0.9.1-jdk-windowsservercore-ltsc2016`](https://github.com/docker-library/openjdk/blob/9c41f8d6a036a5a6cc9cb5fd2fd6400c9b6c2890/11/jdk/windows/windowsservercore-ltsc2016/Dockerfile)
+-	`11.0.9.1-jdk-windowsservercore`, `11.0.9.1-windowsservercore`, `11.0.9-jdk-windowsservercore`, `11.0.9-windowsservercore`, `11.0-jdk-windowsservercore`, `11.0-windowsservercore`, `11-jdk-windowsservercore`, `11-windowsservercore`:
+	-	[`11.0.9.1-jdk-windowsservercore-1809`](https://github.com/docker-library/openjdk/blob/9c41f8d6a036a5a6cc9cb5fd2fd6400c9b6c2890/11/jdk/windows/windowsservercore-1809/Dockerfile)
+	-	[`11.0.9.1-jdk-windowsservercore-ltsc2016`](https://github.com/docker-library/openjdk/blob/9c41f8d6a036a5a6cc9cb5fd2fd6400c9b6c2890/11/jdk/windows/windowsservercore-ltsc2016/Dockerfile)
+-	`11.0.9.1-jdk-nanoserver`, `11.0.9.1-nanoserver`, `11.0.9-jdk-nanoserver`, `11.0.9-nanoserver`, `11.0-jdk-nanoserver`, `11.0-nanoserver`, `11-jdk-nanoserver`, `11-nanoserver`:
+	-	[`11.0.9.1-jdk-nanoserver-1809`](https://github.com/docker-library/openjdk/blob/9c41f8d6a036a5a6cc9cb5fd2fd6400c9b6c2890/11/jdk/windows/nanoserver-1809/Dockerfile)
+-	`11.0.9.1-jre`, `11.0.9-jre`, `11.0-jre`, `11-jre`:
+	-	[`11.0.9.1-jre-buster`](https://github.com/docker-library/openjdk/blob/9c41f8d6a036a5a6cc9cb5fd2fd6400c9b6c2890/11/jre/buster/Dockerfile)
+	-	[`11.0.9.1-jre-windowsservercore-1809`](https://github.com/docker-library/openjdk/blob/9c41f8d6a036a5a6cc9cb5fd2fd6400c9b6c2890/11/jre/windows/windowsservercore-1809/Dockerfile)
+	-	[`11.0.9.1-jre-windowsservercore-ltsc2016`](https://github.com/docker-library/openjdk/blob/9c41f8d6a036a5a6cc9cb5fd2fd6400c9b6c2890/11/jre/windows/windowsservercore-ltsc2016/Dockerfile)
+-	`11.0.9.1-jre-windowsservercore`, `11.0.9-jre-windowsservercore`, `11.0-jre-windowsservercore`, `11-jre-windowsservercore`:
+	-	[`11.0.9.1-jre-windowsservercore-1809`](https://github.com/docker-library/openjdk/blob/9c41f8d6a036a5a6cc9cb5fd2fd6400c9b6c2890/11/jre/windows/windowsservercore-1809/Dockerfile)
+	-	[`11.0.9.1-jre-windowsservercore-ltsc2016`](https://github.com/docker-library/openjdk/blob/9c41f8d6a036a5a6cc9cb5fd2fd6400c9b6c2890/11/jre/windows/windowsservercore-ltsc2016/Dockerfile)
+-	`11.0.9.1-jre-nanoserver`, `11.0.9-jre-nanoserver`, `11.0-jre-nanoserver`, `11-jre-nanoserver`:
+	-	[`11.0.9.1-jre-nanoserver-1809`](https://github.com/docker-library/openjdk/blob/9c41f8d6a036a5a6cc9cb5fd2fd6400c9b6c2890/11/jre/windows/nanoserver-1809/Dockerfile)
+-	`8u275-jdk`, `8u275`, `8-jdk`, `8`:
+	-	[`8u275-jdk-buster`](https://github.com/docker-library/openjdk/blob/70b5e5f035002633169423e237cffb65c7a39d4f/8/jdk/buster/Dockerfile)
+	-	[`8u275-jdk-windowsservercore-1809`](https://github.com/docker-library/openjdk/blob/70b5e5f035002633169423e237cffb65c7a39d4f/8/jdk/windows/windowsservercore-1809/Dockerfile)
+	-	[`8u275-jdk-windowsservercore-ltsc2016`](https://github.com/docker-library/openjdk/blob/70b5e5f035002633169423e237cffb65c7a39d4f/8/jdk/windows/windowsservercore-ltsc2016/Dockerfile)
+-	`8u275-jdk-windowsservercore`, `8u275-windowsservercore`, `8-jdk-windowsservercore`, `8-windowsservercore`:
+	-	[`8u275-jdk-windowsservercore-1809`](https://github.com/docker-library/openjdk/blob/70b5e5f035002633169423e237cffb65c7a39d4f/8/jdk/windows/windowsservercore-1809/Dockerfile)
+	-	[`8u275-jdk-windowsservercore-ltsc2016`](https://github.com/docker-library/openjdk/blob/70b5e5f035002633169423e237cffb65c7a39d4f/8/jdk/windows/windowsservercore-ltsc2016/Dockerfile)
+-	`8u275-jdk-nanoserver`, `8u275-nanoserver`, `8-jdk-nanoserver`, `8-nanoserver`:
+	-	[`8u275-jdk-nanoserver-1809`](https://github.com/docker-library/openjdk/blob/70b5e5f035002633169423e237cffb65c7a39d4f/8/jdk/windows/nanoserver-1809/Dockerfile)
+-	`8u275-jre`, `8-jre`:
+	-	[`8u275-jre-buster`](https://github.com/docker-library/openjdk/blob/70b5e5f035002633169423e237cffb65c7a39d4f/8/jre/buster/Dockerfile)
+	-	[`8u275-jre-windowsservercore-1809`](https://github.com/docker-library/openjdk/blob/70b5e5f035002633169423e237cffb65c7a39d4f/8/jre/windows/windowsservercore-1809/Dockerfile)
+	-	[`8u275-jre-windowsservercore-ltsc2016`](https://github.com/docker-library/openjdk/blob/70b5e5f035002633169423e237cffb65c7a39d4f/8/jre/windows/windowsservercore-ltsc2016/Dockerfile)
+-	`8u275-jre-windowsservercore`, `8-jre-windowsservercore`:
+	-	[`8u275-jre-windowsservercore-1809`](https://github.com/docker-library/openjdk/blob/70b5e5f035002633169423e237cffb65c7a39d4f/8/jre/windows/windowsservercore-1809/Dockerfile)
+	-	[`8u275-jre-windowsservercore-ltsc2016`](https://github.com/docker-library/openjdk/blob/70b5e5f035002633169423e237cffb65c7a39d4f/8/jre/windows/windowsservercore-ltsc2016/Dockerfile)
+-	`8u275-jre-nanoserver`, `8-jre-nanoserver`:
+	-	[`8u275-jre-nanoserver-1809`](https://github.com/docker-library/openjdk/blob/70b5e5f035002633169423e237cffb65c7a39d4f/8/jre/windows/nanoserver-1809/Dockerfile)
+
+# Quick reference (cont.)
+
+-	**Where to file issues**:  
+	[https://github.com/docker-library/openjdk/issues](https://github.com/docker-library/openjdk/issues)
+
 -	**Supported architectures**: ([more info](https://github.com/docker-library/official-images#architectures-other-than-amd64))  
-	[`amd64`](https://hub.docker.com/r/amd64/openjdk/), [`arm32v5`](https://hub.docker.com/r/arm32v5/openjdk/), [`arm32v6`](https://hub.docker.com/r/arm32v6/openjdk/), [`arm32v7`](https://hub.docker.com/r/arm32v7/openjdk/), [`arm64v8`](https://hub.docker.com/r/arm64v8/openjdk/), [`i386`](https://hub.docker.com/r/i386/openjdk/), [`ppc64le`](https://hub.docker.com/r/ppc64le/openjdk/), [`s390x`](https://hub.docker.com/r/s390x/openjdk/), [`windows-amd64`](https://hub.docker.com/r/winamd64/openjdk/)
+	[`amd64`](https://hub.docker.com/r/amd64/openjdk/), [`arm64v8`](https://hub.docker.com/r/arm64v8/openjdk/), [`windows-amd64`](https://hub.docker.com/r/winamd64/openjdk/)
 
 -	**Published image artifact details**:  
 	[repo-info repo's `repos/openjdk/` directory](https://github.com/docker-library/repo-info/blob/master/repos/openjdk) ([history](https://github.com/docker-library/repo-info/commits/master/repos/openjdk))  
@@ -96,9 +139,6 @@ WARNING:
 
 -	**Source of this description**:  
 	[docs repo's `openjdk/` directory](https://github.com/docker-library/docs/tree/master/openjdk) ([history](https://github.com/docker-library/docs/commits/master/openjdk))
-
--	**Supported Docker versions**:  
-	[the latest release](https://github.com/docker/docker-ce/releases/latest) (down to 1.6 on a best-effort basis)
 
 # What is OpenJDK?
 
@@ -143,23 +183,19 @@ This will add your current directory as a volume to the container, set the worki
 
 ## Make JVM respect CPU and RAM limits
 
-On startup JVM tries to detect the number of available CPU cores and the amount of RAM to adjust its internal parameters (like the number of garbage collector threads to spawn) accordingly. When container is run with limited CPU/RAM, standard system API, used by JVM for probing, will return host-wide values. This can cause excessive CPU usage and memory allocation errors with older versions of JVM.
+On startup the JVM tries to detect the number of available CPU cores and RAM to adjust its internal parameters (like the number of garbage collector threads to spawn) accordingly. When the container is ran with limited CPU/RAM then the standard system API used by the JVM for probing it will return host-wide values. This can cause excessive CPU usage and memory allocation errors with older versions of the JVM.
 
-Inside Linux containers, recent versions of OpenJDK 8 can correctly detect container-limited number of CPU cores by default. To enable the detection of container-limited amount of RAM the following options can be used:
+Inside Linux containers, OpenJDK versions 8 and later can correctly detect the container-limited number of CPU cores and available RAM. For all currently supported OpenJDK versions this is turned on by default.
 
-```console
-$ java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap ...
-```
-
-Inside Windows Server (non-Hyper-V) containers, limit for number of available CPU cores does not work (is ignored by Host Compute Service). To set such limit manually, JVM can be started the following way:
+Inside Windows Server (non-Hyper-V) containers, the limit for the number of available CPU cores doesn't work (it's ignored by Host Compute Service). To set the limit manually the JVM can be started as:
 
 ```console
 $ start /b /wait /affinity 0x3 path/to/java.exe ...
 ```
 
-In this example CPU affinity hex mask `0x3` will limit JVM to 2 CPU cores.
+In this example CPU affinity hex mask `0x3` will limit the JVM to 2 CPU cores.
 
-RAM limit is supported by Windows Server containers, but currently JVM cannot detect it. To prevent excessive memory allocations, `-XX:MaxRAM=...` option must be specified with the value that is not bigger than a containers RAM limit.
+RAM limit is supported by Windows Server containers, but currently the JVM cannot detect it. To prevent excessive memory allocations, `-XX:MaxRAM=...` option must be specified with the value that is not bigger than the containers RAM limit.
 
 ## Environment variables with periods in their names
 
@@ -173,17 +209,30 @@ The `openjdk` images come in many flavors, each designed for a specific use case
 
 This is the defacto image. If you are unsure about what your needs are, you probably want to use this one. It is designed to be used both as a throw away container (mount your source code and start the container to start your app), as well as the base to build other images off of.
 
-## `openjdk:<version>-slim`
+Some of these tags may have names like buster in them. These are the suite code names for releases of [Debian](https://wiki.debian.org/DebianReleases) and indicate which release the image is based on. If your image needs to install any additional packages beyond what comes with the image, you'll likely want to specify one of these explicitly to minimize breakage when there are new releases of Debian.
 
-This image installs the `-headless` package of OpenJDK and so is missing many of the UI-related Java libraries and some common packages contained in the default tag. It only contains the minimal packages needed to run Java. Unless you are working in an environment where *only* the `openjdk` image will be deployed and you have space constraints, we highly recommend using the default image of this repository.
+## `openjdk:<version>` (from 12 onwards), `openjdk:<version>-oracle` and `openjdk:<version>-oraclelinux7`
+
+Starting with `openjdk:12` the default image as well as the `-oracle` and `-oraclelinux7` variants are based on the official [Oracle Linux 7 image](https://hub.docker.com/_/oraclelinux) which is provided under the GPLv2 as per the [Oracle Linux End User Agreement (EULA)](https://oss.oracle.com/ol7/EULA).
+
+The OpenJDK binaries in the default image as well as the `-oracle` and `-oraclelinux7` variants are built by Oracle and are sourced from the [OpenJDK community](https://openjdk.java.net/). These binaries are licensed under the [GPLv2 with the Classpath Exception](https://openjdk.java.net/legal/gplv2+ce.html).
 
 ## `openjdk:<version>-alpine`
 
-This image is based on the popular [Alpine Linux project](http://alpinelinux.org), available in [the `alpine` official image](https://hub.docker.com/_/alpine). Alpine Linux is much smaller than most distribution base images (~5MB), and thus leads to much slimmer images in general.
+This image is based on the popular [Alpine Linux project](https://alpinelinux.org), available in [the `alpine` official image](https://hub.docker.com/_/alpine). Alpine Linux is much smaller than most distribution base images (~5MB), and thus leads to much slimmer images in general.
 
-This variant is highly recommended when final image size being as small as possible is desired. The main caveat to note is that it does use [musl libc](http://www.musl-libc.org) instead of [glibc and friends](http://www.etalabs.net/compare_libcs.html), so certain software might run into issues depending on the depth of their libc requirements. However, most software doesn't have an issue with this, so this variant is usually a very safe choice. See [this Hacker News comment thread](https://news.ycombinator.com/item?id=10782897) for more discussion of the issues that might arise and some pro/con comparisons of using Alpine-based images.
+The OpenJDK port for Alpine is not in a supported release by OpenJDK, since it is not in the mainline code base. It is only available as early access builds of [OpenJDK Project Portola](http://openjdk.java.net/projects/portola). See also [this comment](https://github.com/docker-library/openjdk/pull/235#issuecomment-424599754). So this image follows what is available from the OpenJDK project's maintainers.
 
-To minimize image size, it's uncommon for additional related tools (such as `git` or `bash`) to be included in Alpine-based images. Using this image as a base, add the things you need in your own Dockerfile (see the [`alpine` image description](https://hub.docker.com/_/alpine/) for examples of how to install packages if you are unfamiliar).
+What this means is that Alpine based images are only released for early access release versions of OpenJDK. Once a particular release becomes a "General-Availability" release, the Alpine version is dropped from the "Supported Tags"; they are still available to pull, but will no longer be updated.
+
+## `openjdk:<version>-windowsservercore`
+
+This image is based on [Windows Server Core (`microsoft/windowsservercore`)](https://hub.docker.com/r/microsoft/windowsservercore/). As such, it only works in places which that image does, such as Windows 10 Professional/Enterprise (Anniversary Edition) or Windows Server 2016.
+
+For information about how to get Docker running on Windows, please see the relevant "Quick Start" guide provided by Microsoft:
+
+-	[Windows Server Quick Start](https://msdn.microsoft.com/en-us/virtualization/windowscontainers/quick_start/quick_start_windows_server)
+-	[Windows 10 Quick Start](https://msdn.microsoft.com/en-us/virtualization/windowscontainers/quick_start/quick_start_windows_10)
 
 # License
 
